<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/color"
        android:showAsAction="ifRoom"
        android:visible="true"
        app:showAsAction="always"
        android:checkable="false"
        android:enabled="true"
        android:id="@+id/color"
        android:checked="false"
        tools:ignore="AppCompatResource">
        <menu >
            <group android:enabled="true"
                tools:checkableBehavior="single"
                android:visible="true"
                android:checkableBehavior="single">
                <item android:title="@string/red"
                    android:id="@+id/redcolor"
                    android:checked="false" />
                <item android:title="@string/black"
                    android:id="@+id/blackcolor"
                    android:enabled="true"
                    android:checked="true" />
                <item android:title="@string/blue"
                    android:id="@+id/bluecolor"
                    android:checked="false" />
                <item android:title="@string/green"
                    android:id="@+id/greencolor"
                    android:checked="false" />
            </group>
        </menu>
    </item>
    <item android:title="@string/mode"
        android:id="@+id/mode"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:checkable="false"
        app:showAsAction="ifRoom"
        android:checked="true"
        tools:ignore="AppCompatResource">
        <menu >
            <group android:enabled="true"
                android:checkableBehavior="single"
                android:visible="true">
                <item android:title="@string/draw"
                    android:id="@+id/draw"
                    android:enabled="true"
                    android:checked="true" />
                <item android:title="@string/move"
                    android:id="@+id/move"
                    android:checked="false"
                    android:showAsAction="ifRoom" />
                <item android:title="@string/delete"
                    android:id="@+id/delete"
                    android:checked="false" />
            </group>
        </menu>
    </item>

</menu>